--- a/Karma-page/css/karma.css
+++ b/Karma-page/css/karma.css
@@ -2,10 +2,12 @@
 /*main section for navigationbar*/
 .navmain{
 	height:70px;
-	width:950px;
+	width:100%;
 	margin:0px auto;
 	background-color: #fff;
-	
+
+	position: fixed;
+	top:0px;
 
 }
 
@@ -57,9 +59,9 @@
 }
 
 .image2{
-width:1250px;
+width:100%;
 height:600px;
-background-image: url('imag/backimage.jpg');	
+background-image: url('../imag/backimage.jpg');	
 background-repeat: no-repeat;
 background-position: center;
 background-size: cover;
@@ -99,9 +101,14 @@ border-radius: 4px;
 padding: 10px;
 border-style: none;
 text-align: center;
-text-decoration: none;
 font-size: 20px;
-color:white;
+list-style:none; 
+}
+
+.image2 button a{
+	text-decoration: none;
+	color:white; 
+
 }
 
 .image2 button:hover{
@@ -144,3 +151,38 @@ color:white;
 
 }
 
+
+.footer{
+	margin-top:20px;
+	margin-left:500px;
+
+
+}
+
+.footerul li{
+	
+		
+	width:40px;
+	height:30px;
+	margin:10px;
+	text-align: center;
+	padding-top:10px;
+	border-radius: 650px 650px 650px 650px;
+	list-style:none;
+	float:left;
+	border: 1px solid #D2D5DB;
+	
+
+}
+
+.fa-twitter{
+	color:#2AAAED;
+}
+
+.fa-facebook{
+	color:#1A3A82;
+}
+
+.fa-instagram{
+	color:#1A3A82;
+}
